# AirGuitar

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CompilerWarnings.cmake  FetchJUCE.cmake  FetchModels.cmake  FetchTFLite.cmake  ruy-project-include.cmake
python/: train_chord_classifier.py
scripts/: download_models.sh  setup.sh
src/: CMakeLists.txt  main.cpp
src/App/: Application.cpp  Application.h  CrashLogger.h  MainComponent.cpp  MainComponent.h
src/Audio/: AudioEngine.cpp  AudioEngine.h  BodyResonance.cpp  BodyResonance.h  KarplusStrong.cpp  KarplusStrong.h  MidiOutput.cpp  MidiOutput.h  StringModel.cpp  StringModel.h
src/Calibration/: CalibrationManager.cpp  CalibrationManager.h
src/Physics/: CalibrationData.h  ChordClassifier.cpp  ChordClassifier.h  FretboardTracker.cpp  FretboardTracker.h  NoteEvent.h  OneEuroFilter.cpp  OneEuroFilter.h  PhysicsData.h  PhysicsEngine.cpp  PhysicsEngine.h  StrumDetector.cpp  StrumDetector.h
src/UI/: CalibrationWizard.cpp  CalibrationWizard.h
src/Vision/: Camera.cpp  Camera.h  HandLandmarker.cpp  HandLandmarker.h  HandPipeline.cpp  HandPipeline.h  LandmarkData.h  PalmDetector.cpp  PalmDetector.h  PoseLandmarker.cpp  PoseLandmarker.h  TFLiteRuntime.cpp  TFLiteRuntime.h
tests/: AudioTests.cpp  CMakeLists.txt  CalibrationTests.cpp  ChordClassifierTests.cpp  FretboardTrackerTests.cpp  OneEuroFilterTests.cpp  PhysicsEngineTests.cpp  PhysicsTests.cpp  StrumDetectorTests.cpp  VisionTests.cpp
